[gd_scene load_steps=3 format=3 uid="uid://ctdiob70qp8fl"]

[ext_resource type="Script" path="res://thugs_behaviour.gd" id="1_cw75f"]
[ext_resource type="PackedScene" uid="uid://bryd8jxk35r8j" path="res://love_and_light_tv.tscn" id="2_b70oq"]

[node name="ThugsBehaviour" type="Node2D"]
script = ExtResource("1_cw75f")

[node name="ThugTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="CharacterBody2D" parent="." instance=ExtResource("2_b70oq")]
visible = false

[node name="BrandonTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="DreamyTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="JasonTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="brandon_chance" from="." to="." method="_on_brandon_chance"]
[connection signal="dreamy_chance" from="." to="." method="_on_dreamy_chance"]
[connection signal="start_the_thug_timer" from="." to="." method="_on_start_the_thug_timer"]
[connection signal="stop_the_thug_timer" from="." to="." method="_on_stop_the_thug_timer"]
[connection signal="timeout" from="ThugTimer" to="." method="_on_thug_timer_night_1_timeout"]
[connection signal="timeout" from="BrandonTimer" to="." method="_on_brandon_timer_timeout"]
[connection signal="timeout" from="DreamyTimer" to="." method="_on_dreamy_timer_timeout"]
[connection signal="timeout" from="JasonTimer" to="." method="_on_jason_timer_timeout"]

[editable path="CharacterBody2D"]
